@@ -102,11 +102,11 @@ public class NotificationAreaIcon : Plug
 		menu.Append (play_album_menu_item);
 
 		sep = new SeparatorMenuItem ();
-		menu.Append (sep);
+		//menu.Append (sep);
 
 		information_menu_item = new ImageMenuItem (Muine.Catalog.GetString ("Song _Information"));
 		information_menu_item.Image = new Gtk.Image (Stock.DialogInfo, IconSize.Menu);
-		menu.Append (information_menu_item);
+		//menu.Append (information_menu_item);
 
 		sep = new SeparatorMenuItem ();
 		menu.Append (sep);
